--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,23 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+:root{
+  --bg-dark: #1A2F3A;
+  
+  --logo-height: 100px;
+  --header-height: 100px;
+  --menu-top-height: 70px;
+  --aside-width: 225px;
+  --footer-height: 40px;
+
+  --shadow:
+    0 2px 23px 0 rgba(0, 0, 0, 0.1),
+    0 2px 49px 0 rgba(0, 0, 0, 0.06);
+}
+
+*{
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 }
